2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* debian/control: Debian patches by Anthony Fok

	* input/regression/lyric-combine-polyphonic.ly: new file.

	* ly/engraver-init.ly (VoiceContext): add Grob_pq_engraver to
	Voice context.

2002-08-31 Graham Percival  <gperciva@sfu.ca>

        * Documentation/user/tutorial.itely:  editorial changes
	(spelling, grammar, etc) of the orchestral score, integrating text +
	music, and the end of tutorial.

2002-08-31 Rune Zedeler  <rune@zedeler.dk>

	* input/test/sondag-morgen/*.ly: 1.6 compatibility knee fixes

	* lily/tab-note-heads-engraver.cc: Bugfix for instruments not
	having 6 strings.
	
2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.6.1 released
	
	* lily/kpath.cc: 
	* lily/lily-guile.cc: macosx fixes.

	* lily/script-column.cc (before_line_breaking): use stable sorting
	algorithm to preserve script ordering.
	(grob_script_priority_less): new function

	* lily/script-engraver.cc (process_music): 
	* lily/text-engraver.cc (process_acknowledged_grobs):
	* lily/fingering-engraver.cc (make_script): don't use direction
	for script-priority. This fixes orderings for multiple down
	script/fingering.

	* scripts/ly2dvi.py (run_lilypond): don't exit if LilyPond fails,
	but try to assemble the files anyway.

	* input/regression/prefatory-empty-spacing.ly: new file.

	* lily/break-align-interface.cc (do_alignment): translate last
	break-align-group if it is invisible/empty.

	* scm/grob-description.scm (all-grob-descriptions): LeftEdge is
	not a BreakAlignGroup. Do not use
	Break_align_interface::alignment_callback

2002-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (LatexPaper.find_latex_dims): give more
	meaningful error if running latex fails 

	* Documentation/user/refman.itely (Tablatures): small
	corrections. Thanks to Karl Berry

2000-08-30  Heikki Junes <hjunes@cc.hut.fi>

        * make/lilypond.mandrake.spec.in: Mandrake adaptations from